/*
 * Copyright (c) 2014 OpenSilk Productions LLC
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

apply plugin: 'com.android.application'
apply plugin: 'com.jakewharton.hugo'
apply plugin: 'org.robolectric'

// Versioning
def versionMajor = 0
def versionMinor = 2
def versionPatch = 0
def versionBuild = 0 // bump for dogfood builds, public betas, etc.

assert(versionMinor < 100) // Double digits
assert(versionPatch < 100) // Double digits
assert(versionBuild < 100) // Double digits

android {
    compileSdkVersion rootProject.ext.compileSdkVersion
    buildToolsVersion rootProject.ext.buildToolsVersion

    defaultConfig {
        applicationId "org.opensilk.music.plugin.upnp"
        minSdkVersion 15
        targetSdkVersion rootProject.ext.targetSdkVersion
        versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionBuild
        versionName String.format("%d.%d.%d", versionMajor, versionMinor, versionPatch)
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_7
        targetCompatibility JavaVersion.VERSION_1_7
    }

    buildTypes {
        debug {
            applicationIdSuffix ".debug"
            versionNameSuffix rootProject.getDebugVersionSuffix()
        }
    }

    packagingOptions {
        exclude 'META-INF/beans.xml'
    }

    if (file('../../KeyStore').exists()) {
        signingConfigs {
            release {
                def Properties keyProps = new Properties()
                keyProps.load(new FileInputStream(file('../../KeyStore/release2.properties')))
                storeFile file(keyProps["store"])
                keyAlias keyProps["alias"]
                storePassword keyProps["storePass"]
                keyPassword keyProps["pass"]
            }
        }
        buildTypes.release.signingConfig signingConfigs.release
        signingConfigs {
            debug {
                def Properties keyProps = new Properties()
                keyProps.load(new FileInputStream(file('../../KeyStore/debug2.properties')))
                storeFile file(keyProps["store"])
                keyAlias keyProps["alias"]
                storePassword keyProps["storePass"]
                keyPassword keyProps["pass"]
            }
        }
        buildTypes.debug.signingConfig signingConfigs.debug
    } else {
        println "No KeyStore directory found! (You can ignore this warning if your name is not drew)"
    }

}

robolectric {
    include '**/*Test.class'
    //jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
    afterTest {
        descriptor, result -> println "Executing test for ${descriptor.name} with result: ${result.resultType}"
    }
}

repositories {
    maven { url "http://4thline.org/m2" }
}

dependencies {
    compile 'com.jakewharton:butterknife:6.0.0'

    provided 'com.squareup.dagger:dagger-compiler:1.2.2'
    compile 'com.squareup.dagger:dagger:1.2.2'

    compile 'org.fourthline.cling:cling-core:2.0-alpha3'
    compile 'org.fourthline.cling:cling-support:2.0-alpha3'
//    compile('org.seamless:seamless-android:1.0-alpha3'){
//        exclude group: 'com.android.support'
//    }

    compile 'org.eclipse.jetty:jetty-server:8.1.15.v20140411'//8.1.8.v20121106'
    compile 'org.eclipse.jetty:jetty-servlet:8.1.15.v20140411'//8.1.8.v20121106'
    compile 'org.eclipse.jetty:jetty-client:8.1.15.v20140411'//8.1.8.v20121106'

    compile 'org.seamless:seamless-xml:1.0-alpha3'
    compile 'org.apache.commons:commons-lang3:3.3.2'

    compile project(':plugin-common')

    testCompile('junit:junit:4.12')
    testCompile('org.robolectric:robolectric:2.4') {
        exclude module: 'commons-logging'
        exclude module: 'httpclient'
    }
    testCompile('com.squareup:fest-android:1.0.0')
    testCompile('org.mockito:mockito-core:1.10.0')
}
